--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -50,7 +50,7 @@ body
 
 /* iOS safe-area fill for status bar */
 @supports (padding: max(0px)) {
-  @media only screen and (max-width: 1024px) and (hover: none) and (-webkit-touch-callout: none) {
+  @media only screen and (max-width: 1024px) {
     .safe-area-top
     {
       position: fixed;
@@ -59,7 +59,7 @@ body
       right: 0;
       width: 100%;
       height: env(safe-area-inset-top);
-      background: transparent;
+      background-color: rgba(255, 255, 255, 0.01);
       z-index: 9999;
       pointer-events: none;
     }
